--- a/ember/index.html
+++ b/ember/index.html
@@ -4,9 +4,12 @@
 	<meta charset="utf-8">
 	<title>Mancala</title>
 	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/bootstrap-theme.min.css">
 </head>
 <body>
 	<script src="/lib/jquery-2.1.0.min.js"></script>
+	<script src="/lib/bootstrap-v3.1.1.min.js"></script>
 	<script src="/lib/handlebars-v1.3.0.js"></script>
 	<script src="/lib/ember-v1.5.1.min.js"></script>
 	<script src="/app.js"></script>
