--- a/ember/index.html
+++ b/ember/index.html
@@ -8,7 +8,15 @@
 	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+	<script type="text/x-handlebars">
 	<h1 id="page-title">Mancala</h1>
+
+	{{#if username}}
+	<button class="btn btn-info" id="logout" {{action 'logout'}}>Logout</button>
+	{{/if}}
+
+	{{outlet}}
+	</script>
 
 	<script type="text/x-handlebars" data-template-name="login">
 	<div class="login-container">
@@ -32,6 +40,7 @@
 	<script src="/lib/ember-v1.5.1.min.js"></script>
 	<script src="/app.js"></script>
 	<script src="/router.js"></script>
+	<script src="/controllers/ApplicationController.js"></script>
 	<script src="/controllers/LoginController.js"></script>
 </body>
 </html>
